<resources>
    <string name="app_name">Login</string>
    <string name="login_title">Log in Title</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="button_title">Login</string>
    <string name="textview_register">No account yet? Create one</string>
    <string name="login_error_message">Username or Password is incorrect.</string>
    <string name="password_confirm_title">Confirm Password</string>
    <string name="button_register">Register</string>
    <string name="register_error_message">Register failed, Try again!</string>
    <string name="register_password_error">Password does not match</string>
    <string name="register_success">Register Successful</string>

</resources>
